Fix logo spacing

--- a/src/subject/assets/slides.css
+++ b/src/subject/assets/slides.css
@@ -201,6 +201,7 @@ p.shadow {
 
 .slide-logo {
   margin-left: 10px;
+  margin-top: 10px;
 }
 
 .live-example {
